--- a/練習/切版/峰華企業官網/style.css
+++ b/練習/切版/峰華企業官網/style.css
@@ -14,6 +14,7 @@ img {
 header {
   width: 100vw;
   height: 80px;
+  max-width: 100%;
   display: -ms-grid;
   display: grid;
   padding: 0 40px;
@@ -49,5 +50,75 @@ header .burger {
   font-size: 24px;
   font-weight: 600;
   color: #e7e9ec;
+}
+
+.glide {
+  position: relative;
+  top: -80px;
+  z-index: 50;
+}
+
+.glide__slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.glide__slide img,
+.glide__slide video {
+  width: 100vw;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slide-caption {
+  position: absolute;
+  z-index: 70;
+  color: #e7e9ec;
+  text-align: center;
+  max-width: 60vw;
+}
+
+.slide-caption h1 {
+  font-size: 54px;
+  font-weight: 600;
+}
+
+.slide-caption h3 {
+  font-size: 24px;
+  margin: 48px 0;
+}
+
+.slide-caption.left {
+  min-width: 80vw;
+  text-align: left;
+}
+
+.backdrop {
+  background: rgba(42, 42, 42, 0.192);
+  z-index: 60;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.explore-btn {
+  padding: 14px 32px;
+  background: #ee6d75;
+  border: 0;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+  color: #e7e9ec;
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
