--- a/練習/切版/峰華企業官網/style.scss
+++ b/練習/切版/峰華企業官網/style.scss
@@ -1,4 +1,4 @@
-$primary-color: #ff434f;
+$primary-color: #ee6d75;
 $secondary-color: #e3e3e3;
 $text-color-lightest: #e7e9ec;
 $text-color-darker: #2e2e2e;
@@ -6,7 +6,7 @@ $text-color-dark: #494949;
 $text-color-gray: #8b8b8b;
 $text-color-dark-gray: #727272;
 $text-color-light-gray: #c6c6c6;
-$backdrop-color: rgba(42, 42, 42, 0.69);
+$backdrop-color: rgba(42, 42, 42, 0.192);
 
 * {
     margin: 0;
@@ -19,9 +19,13 @@ img {
     width: 100%;
 }
 
+// 導航列
 header {
+    // 使用100vw若出現滾動條加上max-width:100%即可解決
     width: 100vw;
     height: 80px;
+    max-width: 100%;
+
     display: grid;
     padding: 0 40px;
 
@@ -49,10 +53,74 @@ header {
     }
 }
 
-
-
 .logo {
     font-size: 24px;
     font-weight: 600;
     color: $text-color-lightest;
+}
+
+// 輪播圖
+.glide {
+    position: relative;
+    top: -80px;
+    z-index: 50;
+}
+
+.glide__slide {
+    // 垂直置中輪播圖的文字
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img,
+    video {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+}
+
+.slide-caption {
+    position: absolute;
+    z-index: 70;
+    color: $text-color-lightest;
+    text-align: center;
+    max-width: 60vw;
+
+    h1 {
+        font-size: 54px;
+        font-weight: 600;
+    }
+
+    h3 {
+        font-size: 24px;
+        margin: 48px 0;
+    }
+
+    // 第二張輪播圖的文字靠左對齊
+    &.left {
+        min-width: 80vw;
+        text-align: left;
+    }
+}
+
+.backdrop {
+    background: $backdrop-color;
+    z-index: 60;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.explore-btn {
+    padding: 14px 32px;
+    background: $primary-color;
+    border: 0;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    color: $text-color-lightest;
+    font-size: 18px;
 }
