--- a/練習/切版/峰華企業官網/style.css
+++ b/練習/切版/峰華企業官網/style.css
@@ -101,6 +101,10 @@ header .burger {
   text-align: left;
 }
 
+.slide-caption > * {
+  opacity: 0;
+}
+
 .backdrop {
   background: rgba(42, 42, 42, 0.192);
   z-index: 60;
@@ -120,5 +124,87 @@ header .burger {
   cursor: pointer;
   color: #e7e9ec;
   font-size: 18px;
+}
+
+.content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  max-width: 1180px;
+  padding: 0 80px;
+}
+
+.title-about {
+  font-size: 34px;
+  color: #2e2e2e;
+}
+
+.title-about::after {
+  content: "";
+  display: block;
+  width: 80%;
+  height: 4px;
+  background: #ee6d75;
+  margin: 14px;
+}
+
+.intro {
+  margin: 28px 0 60px 0;
+  font-size: 18px;
+  color: #727272;
+}
+
+.about-us {
+  padding-bottom: 32px;
+}
+
+.features {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (126px)[2];
+      grid-template-rows: repeat(2, 126px);
+  -webkit-column-gap: 5vw;
+          column-gap: 5vw;
+}
+
+.feature {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "icon title " "icon content";
+  -ms-grid-columns: 60px 1fr;
+      grid-template-columns: 60px 1fr;
+  -ms-grid-rows: 1fr 3fr;
+      grid-template-rows: 1fr 3fr;
+}
+
+.feature i.fa {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: icon;
+  font-size: 34px;
+  color: #ee6d75;
+}
+
+.feature-title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: title;
+  font-size: 18px;
+  color: #2e2e2e;
 }
 /*# sourceMappingURL=style.css.map */
