--- a/練習/切版/峰華企業官網/style.css
+++ b/練習/切版/峰華企業官網/style.css
@@ -136,6 +136,10 @@ header .burger {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 section {
@@ -146,12 +150,12 @@ section {
   padding: 0 80px;
 }
 
-.title-about {
+.title {
   font-size: 34px;
   color: #2e2e2e;
 }
 
-.title-about::after {
+.title::after {
   content: "";
   display: block;
   width: 80%;
@@ -167,7 +171,7 @@ section {
 }
 
 .about-us {
-  padding-bottom: 32px;
+  padding-bottom: 85px;
 }
 
 .features {
@@ -175,23 +179,26 @@ section {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (126px)[2];
-      grid-template-rows: repeat(2, 126px);
+  -ms-grid-rows: (148px)[2];
+      grid-template-rows: repeat(2, 148px);
   -webkit-column-gap: 5vw;
           column-gap: 5vw;
+  row-gap: 5vw;
 }
 
 .feature {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "icon title " "icon content";
+      grid-template-areas: "icon title" "icon content";
   -ms-grid-columns: 60px 1fr;
       grid-template-columns: 60px 1fr;
   -ms-grid-rows: 1fr 3fr;
       grid-template-rows: 1fr 3fr;
+  -webkit-column-gap: 1vw;
+          column-gap: 1vw;
 }
 
-.feature i.fa {
+.feature img.logo {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
@@ -206,5 +213,60 @@ section {
   grid-area: title;
   font-size: 18px;
   color: #2e2e2e;
+}
+
+.feature-content {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: content;
+  color: #8b8b8b;
+  margin-top: 8px;
+}
+
+.showcases {
+  max-width: unset;
+  padding: 0;
+  padding-top: 72px;
+}
+
+.showcases .cases {
+  width: 100vw;
+  max-width: 100%;
+}
+
+.showcases .case-item {
+  width: 25vw;
+  height: 20vw;
+  overflow: hidden;
+}
+
+.showcases .case-item img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.filter-btns {
+  margin-top: 18px;
+  margin-bottom: 38px;
+}
+
+.filter-btn {
+  margin: 0 7px;
+  background-color: #e3e3e3;
+  border: 0;
+  color: #727272;
+  padding: 8px 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  outline: none;
+}
+
+.filter-btn.active,
+.filter-btn:hover {
+  background-color: #ee6d75;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
