--- a/練習/切版/峰華企業官網/style.css
+++ b/練習/切版/峰華企業官網/style.css
@@ -47,6 +47,43 @@ header .burger {
   display: none;
 }
 
+header.sticky {
+  position: fixed;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+  -webkit-animation: dropDown 0.5s ease-in-out forwards;
+          animation: dropDown 0.5s ease-in-out forwards;
+}
+
+header.sticky .logo,
+header.sticky nav a,
+header.sticky nav i {
+  color: #2e2e2e;
+}
+
+@-webkit-keyframes dropDown {
+  from {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes dropDown {
+  from {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
 .logo {
   font-size: 24px;
   font-weight: 600;
@@ -543,5 +580,257 @@ section {
 
 .read-more-btn:hover {
   cursor: pointer;
+}
+
+footer {
+  margin-top: 124px;
+  background-color: #181818;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  padding-top: 72px;
+  padding-bottom: 24px;
+}
+
+.footer-menus {
+  width: 100%;
+  max-width: 1180px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr (1fr)[4];
+      grid-template-columns: 2fr repeat(4, 1fr);
+  padding: 0 80px;
+  position: relative;
+}
+
+.menu-title {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.contact-us {
+  -ms-grid-column-align: start;
+      justify-self: start;
+  color: #e7e9ec;
+}
+
+.contact-us p:not(:first-child) {
+  padding-bottom: 16px;
+}
+
+.menu-items li {
+  list-style: none;
+  padding-bottom: 8px;
+}
+
+.menu-items li a {
+  text-decoration: none;
+  font-weight: 300;
+  color: #e7e9ec;
+}
+
+.icp-info {
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+.icp-info,
+.rights {
+  grid-column: 1 / -1;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  color: #fff;
+}
+
+.scrollTop {
+  display: none;
+}
+
+.scrollTop a {
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #ee6d75;
+  color: #fff;
+  text-decoration: none;
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 100;
+}
+
+@media (max-width: 1050px) {
+  header {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  header.open nav {
+    display: -ms-grid;
+    display: grid;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100px;
+    background-color: #fff;
+    grid-auto-rows: -webkit-max-content;
+    grid-auto-rows: max-content;
+    justify-items: end;
+    padding: 0 40px;
+    opacity: 0;
+    -webkit-animation: slideDown 0.3s ease-out forwards;
+            animation: slideDown 0.3s ease-out forwards;
+    -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+  }
+  header.open nav > * {
+    color: #2e2e2e;
+    -webkit-animation: showMenu 0.4s linear forwards 0.4s;
+            animation: showMenu 0.4s linear forwards 0.4s;
+    font-size: 18px;
+    margin: 10px 0;
+    opacity: 0;
+  }
+  header.open .logo {
+    z-index: 40;
+    color: #2e2e2e;
+  }
+  header.open .budger-line-1 {
+    -webkit-transform: rotate(45deg) translate(3px, 5px);
+            transform: rotate(45deg) translate(3px, 5px);
+  }
+  header.open .budger-line-2 {
+    -webkit-transform: translateX(5);
+            transform: translateX(5);
+    opacity: 0;
+  }
+  header.open .budger-line-3 {
+    -webkit-transform: rotate(-45deg) translate(3px, -5px);
+            transform: rotate(-45deg) translate(3px, -5px);
+  }
+  header.open .budger-line-1,
+  header.open .budger-line-2,
+  header.open .budger-line-3 {
+    background-color: #2e2e2e;
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease;
+  }
+  header nav {
+    display: none;
+  }
+  header .burger {
+    display: block;
+    width: 20px;
+    height: 6px;
+    position: relative;
+    -ms-grid-column-align: end;
+        justify-self: end;
+    cursor: pointer;
+  }
+  header .burger {
+    cursor: pointer;
+  }
+  header .budger-line-1,
+  header .budger-line-2,
+  header .budger-line-3 {
+    width: 20px;
+    height: 2px;
+    background-color: #494949;
+  }
+  header .budger-line-1 {
+    position: absolute;
+    top: -6px;
+  }
+  header .budger-line-3 {
+    position: absolute;
+    top: 6px;
+  }
+  @-webkit-keyframes slideDown {
+    from {
+      height: 0;
+      opacity: 0;
+    }
+    to {
+      height: 45vh;
+      padding-top: 80px;
+      opacity: 1;
+    }
+  }
+  @keyframes slideDown {
+    from {
+      height: 0;
+      opacity: 0;
+    }
+    to {
+      height: 45vh;
+      padding-top: 80px;
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes showMenu {
+    from {
+      opacity: 0;
+      -webkit-transform: translateY(-1vh);
+              transform: translateY(-1vh);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+  @keyframes showMenu {
+    from {
+      opacity: 0;
+      -webkit-transform: translateY(-1vh);
+              transform: translateY(-1vh);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+  .service-item .service-title {
+    font-size: 20px;
+  }
+  .service-item .service-content {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .team-members {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    row-gap: 5vh;
+  }
+  .activities {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    row-gap: 5vh;
+  }
+}
+
+@media (max-width: 870px) {
+  .slide-caption h1 {
+    font-size: 48px;
+  }
+  .slide-caption h3 {
+    font-size: 18px;
+  }
+  .features {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
 }
 /*# sourceMappingURL=style.css.map */
