--- a/練習/切版/峰華企業官網/style.scss
+++ b/練習/切版/峰華企業官網/style.scss
@@ -52,6 +52,30 @@ header {
     .burger {
         display: none;
     }
+
+    &.sticky {
+        position: fixed;
+        background-color: #fff;
+        box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+
+        // 動畫名稱 執行時間 forwards(保持在最後一禎)
+        animation: dropDown 0.5s ease-in-out forwards;
+
+        .logo,
+        nav a,
+        nav i {
+            color: $text-color-darker;
+        }
+    }
+}
+
+@keyframes dropDown {
+    from {
+        transform: translateY(-100px);
+    }
+    to {
+        transform: translateY(0);
+    }
 }
 
 .logo {
@@ -494,7 +518,243 @@ section {
     margin-top: 24px;
     outline: none;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
+    }
+}
+
+// 底部訊息
+footer {
+    margin-top: 124px;
+    background-color: #181818;
+    display: grid;
+    justify-items: center;
+    padding-top: 72px;
+    padding-bottom: 24px;
+}
+
+.footer-menus {
+    width: 100%;
+    max-width: 1180px;
+
+    display: grid;
+    grid-template-columns: 2fr repeat(4, 1fr);
+    padding: 0 80px;
+    position: relative;
+}
+
+.menu-title {
+    font-size: 16px;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.contact-us {
+    justify-self: start;
+    color: $text-color-lightest;
+
+    p:not(:first-child) {
+        padding-bottom: 16px;
+    }
+}
+
+.menu-items {
+    li {
+        list-style: none;
+        padding-bottom: 8px;
+
+        a {
+            text-decoration: none;
+            font-weight: 300;
+            color: $text-color-lightest;
+        }
+    }
+}
+
+.icp-info {
+    margin-top: 24px;
+    margin-bottom: 16px;
+}
+
+.icp-info,
+.rights {
+    grid-column: 1 / -1;
+    justify-self: center;
+    color: #fff;
+}
+
+.scrollTop {
+    display: none;
+    a {
+        width: 32px;
+        height: 32px;
+        border-radius: 4px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $primary-color;
+
+        color: #fff;
+        text-decoration: none;
+        position: fixed;
+        bottom: 60px;
+        right: 30px;
+        z-index: 100;
+    }
+}
+
+// RWD
+@media (max-width: 1050px) {
+    // 導航欄位
+    header {
+        grid-template-columns: repeat(2, 1fr);
+
+        &.open {
+            nav {
+                display: grid;
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100vw;
+                height: 100px;
+                background-color: #fff;
+                grid-auto-rows: max-content;
+                justify-items: end;
+                padding: 0 40px;
+                opacity: 0;
+                animation: slideDown 0.3s ease-out forwards;
+                box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+
+                & > * {
+                    color: $text-color-darker;
+                    animation: showMenu 0.4s linear forwards 0.4s;
+                    font-size: 18px;
+                    margin: 10px 0;
+                    opacity: 0;
+                }
+            }
+
+            .logo {
+                z-index: 40;
+                color: $text-color-darker;
+            }
+
+            // 右上角變X
+            .budger-line-1 {
+                transform: rotate(45deg) translate(3px, 5px);
+            }
+
+            .budger-line-2 {
+                transform: translateX(5);
+                opacity: 0;
+            }
+
+            .budger-line-3 {
+                transform: rotate(-45deg) translate(3px, -5px);
+            }
+
+            .budger-line-1,
+            .budger-line-2,
+            .budger-line-3 {
+                background-color: $text-color-darker;
+                transition: 0.4s ease;
+            }
+        }
+
+        nav {
+            display: none;
+        }
+
+        .burger {
+            display: block;
+            width: 20px;
+            height: 6px;
+            position: relative;
+            justify-self: end;
+            cursor: pointer;
+        }
+
+        .burger {
+            cursor: pointer;
+        }
+
+        .budger-line-1,
+        .budger-line-2,
+        .budger-line-3 {
+            width: 20px;
+            height: 2px;
+            background-color: $text-color-dark;
+        }
+
+        .budger-line-1 {
+            position: absolute;
+            top: -6px;
+        }
+
+        .budger-line-3 {
+            position: absolute;
+            top: 6px;
+        }
+    }
+
+    @keyframes slideDown {
+        from {
+            height: 0;
+            opacity: 0;
+        }
+        to {
+            height: 45vh;
+            padding-top: 80px;
+            opacity: 1;
+        }
+    }
+
+    @keyframes showMenu {
+        from {
+            opacity: 0;
+            transform: translateY(-1vh);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .service-item {
+        .service-title {
+            font-size: 20px;
+        }
+
+        .service-content {
+            font-size: 14px;
+            line-height: 24px;
+        }
+    }
+
+    .team-members {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 5vh;
+    }
+
+    .activities {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 5vh;
+    }
+}
+
+@media (max-width: 870px) {
+    .slide-caption {
+        h1 {
+            font-size: 48px;
+        }
+        h3 {
+            font-size: 18px;
+        }
+    }
+
+    .features{
+        grid-template-columns: repeat(2,1fr);
     }
 }
