--- a/練習/切版/峰華企業官網/style.css
+++ b/練習/切版/峰華企業官網/style.css
@@ -2,8 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 微軟正黑體;
   font-size: 14px;
 }
@@ -21,9 +20,7 @@ header {
   padding: 0 40px;
   -ms-grid-columns: 1fr 2fr;
       grid-template-columns: 1fr 2fr;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
   z-index: 200;
 }
@@ -50,10 +47,9 @@ header .burger {
 header.sticky {
   position: fixed;
   background-color: #fff;
-  -webkit-box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
   -webkit-animation: dropDown 0.5s ease-in-out forwards;
-          animation: dropDown 0.5s ease-in-out forwards;
+  animation: dropDown 0.5s ease-in-out forwards;
 }
 
 header.sticky .logo,
@@ -97,15 +93,9 @@ header.sticky nav i {
 }
 
 .glide__slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .glide__slide img,
@@ -113,7 +103,7 @@ header.sticky nav i {
   width: 100vw;
   height: 100vh;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .slide-caption {
@@ -166,19 +156,10 @@ header.sticky nav i {
 
 .content-wrapper {
   max-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 section {
@@ -282,7 +263,7 @@ section {
 .showcases .case-item img {
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .filter-btns {
@@ -298,7 +279,6 @@ section {
   padding: 8px 18px;
   border-radius: 4px;
   cursor: pointer;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
   outline: none;
 }
@@ -310,7 +290,7 @@ section {
 }
 
 .service {
-  padding: 131px;
+  padding: 131px 0;
 }
 
 .services {
@@ -334,8 +314,7 @@ section {
   -ms-grid-rows: 1fr 3fr;
       grid-template-rows: 1fr 3fr;
   padding: 24px;
-  -webkit-box-shadow: 0 0 18px rgba(0, 0, 0, 0.06);
-          box-shadow: 0 0 18px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.06);
 }
 
 .service-item img {
@@ -382,11 +361,9 @@ section {
 
 .team-member {
   background-color: #fff;
-  -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
   text-align: center;
   padding-bottom: 28px;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
   display: -ms-grid;
   display: grid;
@@ -409,8 +386,7 @@ section {
   cursor: pointer;
   -webkit-transform: translateY(-20px) scale(1.05);
           transform: translateY(-20px) scale(1.05);
-  -webkit-box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
 }
 
 .profile-img {
@@ -421,20 +397,17 @@ section {
   width: 100%;
   height: 308px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
 }
 
 .social-links {
   list-style: none;
   width: 100%;
   min-width: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .social-links li {
@@ -442,7 +415,8 @@ section {
 }
 
 .data-section {
-  min-width: 100%;
+  max-width: 100%;
+  overflow: hidden;
   width: 100vw;
   height: 255px;
   background-image: url("images/WsMan - 0505 (81307868) .png");
@@ -452,12 +426,8 @@ section {
   display: grid;
   -ms-grid-columns: (minmax(auto, 220px))[4];
       grid-template-columns: repeat(4, minmax(auto, 220px));
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 20;
 }
@@ -516,18 +486,15 @@ section {
 }
 
 .activity {
-  -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 24px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.1);
   padding: 24px;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 .activity:hover {
   -webkit-transform: translateY(-20px) scale(1.05);
           transform: translateY(-20px) scale(1.05);
-  -webkit-box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 36px rgba(0, 0, 0, 0.1);
 }
 
 .activity .meta {
@@ -535,8 +502,6 @@ section {
   margin-bottom: 12px;
   color: #c6c6c6;
   font-size: 12px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -559,7 +524,7 @@ section {
 .act-img-wrapper img {
   min-height: 300px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .act-title {
@@ -652,15 +617,9 @@ footer {
   width: 32px;
   height: 32px;
   border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background-color: #ee6d75;
   color: #fff;
   text-decoration: none;
@@ -690,14 +649,13 @@ footer {
     padding: 0 40px;
     opacity: 0;
     -webkit-animation: slideDown 0.3s ease-out forwards;
-            animation: slideDown 0.3s ease-out forwards;
-    -webkit-box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
+    animation: slideDown 0.3s ease-out forwards;
+    box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
   }
   header.open nav > * {
     color: #2e2e2e;
     -webkit-animation: showMenu 0.4s linear forwards 0.4s;
-            animation: showMenu 0.4s linear forwards 0.4s;
+    animation: showMenu 0.4s linear forwards 0.4s;
     font-size: 18px;
     margin: 10px 0;
     opacity: 0;
@@ -723,7 +681,6 @@ footer {
   header.open .budger-line-2,
   header.open .budger-line-3 {
     background-color: #2e2e2e;
-    -webkit-transition: 0.4s ease;
     transition: 0.4s ease;
   }
   header nav {
@@ -828,9 +785,54 @@ footer {
   .slide-caption h3 {
     font-size: 18px;
   }
-  .features {
+  .features,
+  .services {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: unset;
+        grid-template-rows: unset;
+  }
+  .data-section {
+    -ms-grid-columns: (minmax(200px, auto))[2];
+        grid-template-columns: repeat(2, minmax(200px, auto));
+    padding: 24px 0;
+    height: auto;
+  }
+  .showcases .case-item {
+    width: calc(100vw / 3);
+  }
+}
+
+@media (max-width: 768px) {
+  section,
+  .footer-menus {
+    padding: 0 40px;
+  }
+  .footer-menus {
+    -ms-grid-columns: 2fr 1fr 1fr;
+        grid-template-columns: 2fr 1fr 1fr;
+    row-gap: 24px;
+  }
+  .contact-us {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1 /3;
+  }
+  .activities,
+  .data-section,
+  .team-members,
+  .services,
+  .features {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .profile-img img {
+    -o-object-position: left -30rem;
+       object-position: left -30rem;
+  }
+  .showcases .case-item {
+    width: calc(100vw / 2);
+    height: 50vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
