--- a/練習/切版/峰華企業官網/style.scss
+++ b/練習/切版/峰華企業官網/style.scss
@@ -59,6 +59,7 @@ header {
         box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
 
         // 動畫名稱 執行時間 forwards(保持在最後一禎)
+        -webkit-animation: dropDown 0.5s ease-in-out forwards;
         animation: dropDown 0.5s ease-in-out forwards;
 
         .logo,
@@ -66,6 +67,15 @@ header {
         nav i {
             color: $text-color-darker;
         }
+    }
+}
+
+@-webkit-keyframes dropDown {
+    from {
+        transform: translateY(-100px);
+    }
+    to {
+        transform: translateY(0);
     }
 }
 
@@ -101,6 +111,7 @@ header {
     video {
         width: 100vw;
         height: 100vh;
+        -o-object-fit: cover;
         object-fit: cover;
     }
 }
@@ -203,6 +214,7 @@ section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 148px);
+    -moz-column-gap: 5vw;
     column-gap: 5vw;
     row-gap: 5vw;
 }
@@ -214,6 +226,7 @@ section {
         "icon content";
     grid-template-columns: 60px 1fr;
     grid-template-rows: 1fr 3fr;
+    -moz-column-gap: 1vw;
     column-gap: 1vw;
 
     img.logo {
@@ -254,6 +267,7 @@ section {
 
         img {
             height: 100%;
+            -o-object-fit: cover;
             object-fit: cover;
         }
     }
@@ -284,13 +298,14 @@ section {
 
 // 服務流程
 .service {
-    padding: 131px;
+    padding: 131px 0;
 }
 
 .services {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr;
+    -moz-column-gap: 38px;
     column-gap: 38px;
     row-gap: 34px;
 }
@@ -335,6 +350,7 @@ section {
 .team-members {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    -moz-column-gap: 24px;
     column-gap: 24px;
     margin-top: 86px;
 }
@@ -375,7 +391,9 @@ section {
     img {
         width: 100%;
         height: 308px;
+        -o-object-fit: cover;
         object-fit: cover;
+        -o-object-position: center;
         object-position: center;
     }
 }
@@ -394,7 +412,8 @@ section {
 
 // 數據部分
 .data-section {
-    min-width: 100%;
+    max-width: 100%;
+    overflow: hidden;
     width: 100vw;
     height: 255px;
     background-image: url("images/WsMan\ -\ 0505\ \(81307868\)\ .png");
@@ -460,6 +479,7 @@ section {
 .activities {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    -moz-column-gap: 24px;
     column-gap: 24px;
 }
 
@@ -499,6 +519,7 @@ section {
 
     img {
         min-height: 300px;
+        -o-object-fit: cover;
         object-fit: cover;
     }
 }
@@ -620,15 +641,18 @@ footer {
                 width: 100vw;
                 height: 100px;
                 background-color: #fff;
+                grid-auto-rows: -webkit-max-content;
                 grid-auto-rows: max-content;
                 justify-items: end;
                 padding: 0 40px;
                 opacity: 0;
+                -webkit-animation: slideDown 0.3s ease-out forwards;
                 animation: slideDown 0.3s ease-out forwards;
                 box-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
 
                 & > * {
                     color: $text-color-darker;
+                    -webkit-animation: showMenu 0.4s linear forwards 0.4s;
                     animation: showMenu 0.4s linear forwards 0.4s;
                     font-size: 18px;
                     margin: 10px 0;
@@ -699,6 +723,18 @@ footer {
         }
     }
 
+    @-webkit-keyframes slideDown {
+        from {
+            height: 0;
+            opacity: 0;
+        }
+        to {
+            height: 45vh;
+            padding-top: 80px;
+            opacity: 1;
+        }
+    }
+
     @keyframes slideDown {
         from {
             height: 0;
@@ -708,6 +744,17 @@ footer {
             height: 45vh;
             padding-top: 80px;
             opacity: 1;
+        }
+    }
+
+    @-webkit-keyframes showMenu {
+        from {
+            opacity: 0;
+            transform: translateY(-1vh);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
         }
     }
 
@@ -754,7 +801,56 @@ footer {
         }
     }
 
-    .features{
-        grid-template-columns: repeat(2,1fr);
+    .features,
+    .services {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: unset;
+    }
+
+    .data-section {
+        grid-template-columns: repeat(2, minmax(200px, auto));
+        padding: 24px 0;
+        height: auto;
+    }
+
+    .showcases {
+        .case-item {
+            width: calc(100vw / 3);
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    section,
+    .footer-menus {
+        padding: 0 40px;
+    }
+
+    .footer-menus {
+        grid-template-columns: 2fr 1fr 1fr;
+        row-gap: 24px;
+    }
+
+    .contact-us {
+        grid-row: 1 /3;
+    }
+
+    .activities,
+    .data-section,
+    .team-members,
+    .services,
+    .features {
+        grid-template-columns: 1fr;
+    }
+
+    .profile-img img {
+        object-position: left -30rem;
+    }
+
+    .showcases {
+        .case-item {
+            width: calc(100vw / 2);
+            height: 50vh;
+        }
     }
 }
